--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     font-size: 26px;
-    color: #ffe400;
+    color: var(--heading_color);
 }
 
 .movie_list_fs {
