--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+:root {
+  --body_background: #101010;
+  --body_color: #fff;
+  --heading_color: #ffe400;
+}
+
+[data-theme="light"] {
+  --body_background: #fff;
+  --body_color: #000;
+  --heading_color: #000;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: all 0.3s ease-in-out;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-  background-color: #101010;
-  color: #fff;
+  background-color: var(--body_background);
+  color: var(--body_color);
   font-family: "Montserrat", sans-serif;
 }
